k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: text-audit
  labels:
    name: text-audit
    app: text-audit-system
